tests/baselines/reference/es6ImportNamedImportInIndirectExportAssignment.errors.txt
tests/cases/compiler/es6ImportNamedImportInIndirectExportAssignment_1.ts(2,12): error TS4000: Import declaration 'x' is using private name 'a'.


==== tests/cases/compiler/es6ImportNamedImportInIndirectExportAssignment_0.ts (0 errors) ====
    
    export module a {
        export class c {
        }
    }
    
==== tests/cases/compiler/es6ImportNamedImportInIndirectExportAssignment_1.ts (1 errors) ====
    import { a } from "es6ImportNamedImportInIndirectExportAssignment_0";
    import x = a;
               ~
!!! error TS4000: Import declaration 'x' is using private name 'a'.
    export = x;